Fixed menu visibility when mobile was rotated

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -21,6 +21,7 @@ header{
     margin-bottom: 1rem;
     text-decoration: none;
     color: var(--white-0);
+    width: fit-content;
 }
 
 .settings_button, .theme_button{
@@ -32,12 +33,11 @@ header{
 }
 
 .settings_list{
-    height: 100px;
     margin-top: 1rem;
     margin-left: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .settings_item{
